refactor repositories + fix qq bugs
